--- a/loan_prediction.ipynb
+++ b/loan_prediction.ipynb
@@ -2130,7 +2130,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -3868,6 +3868,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Handle Categorical Features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
@@ -3922,13 +3929,6 @@
     "assembler_inputs = list(set(df.columns) - set(cat_features)) + [feature + \"_class_vec\" for feature in cat_features]\n",
     "assembler_inputs.remove('loan_is_paid')\n",
     "assembler_inputs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Handle Categorical Features"
    ]
   },
   {
